--- a/fidesctl/demo_resources/demo_data_uses.yml
+++ b/fidesctl/demo_resources/demo_data_uses.yml
@@ -1,15 +1,17 @@
 data_use:
   - fides_key: third_party_sharing.legal_obligation.hmrc
-    name: HMRC Tax Compliance
+    name: Payroll
     description: Payment information as required by HMRC
-    recipient: HMRC
-    purpose_of_processing: Payroll
+    recipients: 
+    - HMRC
+    - IRS
+    - NYDTF
     legal_basis: Legal Obligation
     parent_key: third_party_sharing.legal_obligation
   - fides_key: third_party_sharing.personalized_advertising.marketing_co
-    name: Direct Marketing for marketing company
+    name: Direct Marketing
     description: Consented user information for direct marketing purposes
-    recipient: Processor - marketing co.
-    purpose_of_processing: Direct Marketing
+    recipients: 
+    - Processor - marketing co. 
     legal_basis: Consent
     parent_key: third_party_sharing.personalized_advertising
