--- a/fidesctl/demo_resources/demo_data_uses.yml
+++ b/fidesctl/demo_resources/demo_data_uses.yml
@@ -1,14 +1,14 @@
 data_use:
-  - fides_key: third_party_sharing.legal_obligation.hmrc
+  - fides_key: third_party_sharing.legal_obligation.payroll
     name: Payroll
-    description: Payment information as required by HMRC
+    description: Legally obliged sharing of payroll information
     recipients: 
     - HMRC
     - IRS
     - NYDTF
     legal_basis: Legal Obligation
     parent_key: third_party_sharing.legal_obligation
-  - fides_key: third_party_sharing.personalized_advertising.marketing_co
+  - fides_key: third_party_sharing.personalized_advertising.direct_marketing
     name: Direct Marketing
     description: Consented user information for direct marketing purposes
     recipients: 
