--- a/fidesctl/demo_resources/demo_dataset.yml
+++ b/fidesctl/demo_resources/demo_dataset.yml
@@ -8,6 +8,9 @@ dataset:
   data_qualifiers:
   - aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
   retention: "30 days after account deletion"
+  third_country_transfers:
+    - United States
+    - Canada
   collections:
   - name: users
     description: User information
