--- a/docs/fides/requirements.txt
+++ b/docs/fides/requirements.txt
@@ -3,4 +3,5 @@ mkdocs-minify-plugin==0.4.0
 mkdocs-render-swagger-plugin==0.0.3
 mkdocs-click==0.5.0
 mkdocs-git-revision-date-plugin
+numpy>=1.22.0
 fidesctl # We always want the latest version
