Categories of Processing, Recipients, Legal Basis (#329)
* Add extended data_uses for discussion

* add example of new taxonomy, reformat migration

* remove example and update data_use based on feedback, back out migration

* updated migration, some more cleanup

* exclude list of strings from find_referenced_keys

* refactor find_referenced_fides_keys for xenon

* add updates for third country and admin department

* docs updates for new attributes

* Add legal_basis enum, update/fix docs

* country code validation, clean up docs

* fix validation causing test failure

* doc updates from self-review

* remove trailing whitespace for pylint

* add validation tests for country codes

--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
       - Generating Resources: guides/generate_resource.md
       - Scanning Resources: guides/scan_resource.md
       - Example Policies: guides/policies.md
+      - Extending Data Use: guides/extending_data_use.md
   - CI/CD Reference: ci_reference.md
   - Fides Language:
       - Overview: language/overview.md
