76 Connection config BigQuery (#189)
* adds ability to connect to bigquery

* pass in creds directly instead

* adds some tests for bigquery

* updates secrets vars for bigquery, adds fixtures to seed initial data

* gets bigquery integration test working with test data

* adds postman and docs

* lint

* unneeded changes

* remove placeholder keys from integration.toml

--- a/.github/workflows/unsafe_pr_checks.yml
+++ b/.github/workflows/unsafe_pr_checks.yml
@@ -18,5 +18,7 @@ jobs:
         env:
           REDSHIFT_TEST_URI: ${{ secrets.REDSHIFT_TEST_URI }}
           REDSHIFT_TEST_DB_SCHEMA: ${{ secrets.REDSHIFT_TEST_DB_SCHEMA }}
+          BIGQUERY_KEYFILE_CREDS: ${{ secrets.BIGQUERY_KEYFILE_CREDS }}
+          BIGQUERY_DATASET: ${{ secrets.BIGQUERY_DATASET }}
           SNOWFLAKE_TEST_URI: ${{ secrets.SNOWFLAKE_TEST_URI }}
         run: make pytest-integration-external
