--- a/pytest.ini
+++ b/pytest.ini
@@ -13,6 +13,7 @@ markers =
     integration_redshift
     integration_snowflake
     integration_mariadb
+    integration_bigquery
 
 filterwarnings =
     ignore::DeprecationWarning:aiofiles.*:
