Add support for Array Access Requests in MongoDB [#146][#147] (#194)
* Start expanding initial mongo data populated and the mongo example dataset with representative nested examples.

* Instead of using pandas json normalize to only retrieve data categories we care about,  add new method select_field_from_input_data that can use a FieldPath to select data we care about from input_data and add it to the "base" dictionary.  This method takes into account that a FieldPath may point to data within arrays.

* Cache the inputs that were used to locate records on each collection in redis, to use to filter privacy request data after the fact.  For example, an email from one collection might have been used to find records in another collection where an email was located in an array.   Only this matched email in the array may be the relevant data the user wants to see.

* Use inputs into the collection to potentially filter array data to only contain matched values. Also modify get_collection_inputs to take a privacy_request_id string, instead of the entire object for easier testing.

Say we looked up records on a collection that has at least one array containing the passenger_id 112.  So the input is:  "passenger_ids": [112].  This returned a row with passenger_ids: [111, 112, 113, and 114].  Default behavior is to just return the matched field,  "passenger_ids": [112].

* Update `to_dask_input_data` to consolidate array outputs and outputs from arrays of dicts into a single array to feed into subsequent collections (flatten_and_merge_matches/append).

Restore original behavior that if a FieldPath is not found in input data, we don't return an empty dict (add new strip_empty_dicts function).

* Don't delete empty dicts out of arrays -

* Uncomment more complex mongo dataset annotations and add more detailed tests on GraphTask.to_dask_input function around more complicated nested object and array structures to verify how data is being consolidated and passed i

--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
       - Authenticate with OAuth: guides/oauth.md  
       - Connect SQL and NoSQL Databases: guides/database_connectors.md
       - Configure Datasets: guides/datasets.md
+      - Annotate Complex Fields: guides/complex_fields.md
       - Preview Query Execution: guides/query_execution.md  
       - Create Request Policies: guides/policies.md  
       - Configure Data Masking Strategies: guides/masking_strategies.md  
