Revert "checkpoint, added mike for versioning"
This reverts commit cfe84ee54ef9730e439770c9dd6a59fae03a5089.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,12 +44,8 @@ services:
     build:
       context: docs/fides/
     volumes:
-      - type: bind
-        source: .
-        target: /fides
-        read_only: False
+      - ./docs/fides:/docs
       - ./fidesctl:/fidesctl
-    working_dir: /fides/docs/fides
     expose:
       - 8000
     ports:
