--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -1,22 +1,49 @@
-name: Publish updated docs to gh-pages
+name: Publish Docs
 
 on:
   push:
     branches:
       - main
-    paths:
-      - "docs/**"
+  release:
+    types: [published]
+
+env:
+  TAG: ${{ github.event.release.tag_name }}
 
 jobs:
   publish_docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-python@v2
-      - run: pip install -r docs/fides/requirements.txt
+
+      - name: Echo the Release Tag
+        run: echo ${{ env.TAG }}
+
+      - name: Install Docs Requirements
+        run: pip install -r docs/fidesctl/requirements.txt
+
+      - name: Checkout the gh-pages branches
+        run: git fetch origin gh-pages --depth=1
+
       - name: Build docs
         run: make docs-build
-      - name: Publish docs
-        run: mkdocs gh-deploy -v -f docs/fides/mkdocs.yml --force
-        env:
-          PROD_PUBLISH: true
+
+      # This is required by "mike"
+      - name: Set the Git Username & Email
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+      - name: Deploy Stable Docs if a Release is Tagged
+        if: ${{ env.TAG }}
+        run: mike deploy --config-file docs/fidesctl/mkdocs.yml --push --update-aliases ${{ env.TAG }} stable
+
+      # This will match "stable" when a new release is cut
+      - name: Deploy Dev Docs
+        run: mike deploy --config-file docs/fidesctl/mkdocs.yml --push dev
+
+      - name: Set Default Version
+        run: mike set-default --config-file docs/fidesctl/mkdocs.yml --push stable
