--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -117,6 +117,11 @@ extra_css:
   - css/cli.css
   - css/taxonomy.css
 
+extra:
+  version:
+    provider: mike
+    default: stable
+
 plugins:
   # The "Last Update" footer only shows in production
   - git-revision-date:
