--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -30,7 +30,7 @@ jobs:
         run: echo ${{ env.TAG }}
 
       - name: Install Docs Requirements
-        run: pip install -r docs/fidesctl/requirements.txt
+        run: pip install -r docs/fides/requirements.txt
 
       - name: Checkout the gh-pages branches
         run: git fetch origin gh-pages --depth=1
@@ -46,11 +46,11 @@ jobs:
 
       - name: Deploy Stable Docs if a Release is Tagged
         if: ${{ env.TAG }}
-        run: mike deploy --config-file docs/fidesctl/mkdocs.yml --push --update-aliases ${{ env.TAG }} stable
+        run: mike deploy --config-file docs/fides/mkdocs.yml --push --update-aliases ${{ env.TAG }} stable
 
       # This will match "stable" when a new release is cut
       - name: Deploy Dev Docs
-        run: mike deploy --config-file docs/fidesctl/mkdocs.yml --push dev
+        run: mike deploy --config-file docs/fides/mkdocs.yml --push dev
 
       - name: Set Default Version
-        run: mike set-default --config-file docs/fidesctl/mkdocs.yml --push stable
+        run: mike set-default --config-file docs/fides/mkdocs.yml --push stable
