Consolidate `erasure` and `access` tests into `integration` tests (#185)
* add fixtures directory, move postgres data creation to a fixture

* use postgres_integration_db in all erasure tests

* add config params for connection

* rearrange truncate logic, use autocommit

* make blac

* remove sql

* remove pdf

* remove whitespace

* add new fixtures

* add fixtures for MySQL

* encapsulate truncate logic

* use new mysql fixture in erasure test

* remove insert statements from mysql

* remove insert statements from mssql

* fixtures for mssql

* remove final integration_erasure mark

* purge all mention of integration_erasure

* split existing fixtures into datastore specific files

* use regular connection_config

* add db reference where its required

* use correct fixture name

* fix anomalies

* remove ref to integration_erasure

* use mssql fixture

* use correct marker

* add a timeout limit to CI jobs

* remove general time cap

* clarify docs

* put data back into sql file

* adds some logging commands, dont automatically create DB on database creation

* feed fixture directly from sql file

* move postgres creation / dropping to sqlalchemy_utils, out of raw sql. use the same postgres client

* make postgres integration db available where it needs to be

* use correct mysql fixture

* delete from table instead of truncate

* use right mariadb connection

* add mssql data

* use connection_config over postgres_integration_config

* use connection_config

* add mysql data

* fix typo

* remove unused fixture

* remove unused debug code

* adds comment

* set infra wait time depending on how much infra is being brought up

* cleanup mongo fixtures at teardown not setup

* add db setup scripts and directory

* remove old mssql setup script

--- a/.github/workflows/safe_pr_checks.yml
+++ b/.github/workflows/safe_pr_checks.yml
@@ -32,9 +32,8 @@ jobs:
 
       - name: Unit Tests
         run: make pytest
+        timeout-minutes: 20
 
       - name: Integration Tests
         run: make pytest-integration
-
-      - name: Integration Tests (Erasure)
-        run: make pytest-integration-erasure
+        timeout-minutes: 20
