--- a/pytest.ini
+++ b/pytest.ini
@@ -13,6 +13,7 @@ markers =
     integration_snowflake
     integration_mariadb
     integration_bigquery
+    saas_connector
 
 filterwarnings =
     ignore::DeprecationWarning:aiofiles.*:
