--- a/.github/workflows/unsafe_pr_checks.yml
+++ b/.github/workflows/unsafe_pr_checks.yml
@@ -22,3 +22,11 @@ jobs:
           BIGQUERY_DATASET: ${{ secrets.BIGQUERY_DATASET }}
           SNOWFLAKE_TEST_URI: ${{ secrets.SNOWFLAKE_TEST_URI }}
         run: make pytest-integration-external
+
+      - name: SaaS Connector Tests
+        env:
+          MAILCHIMP_DOMAIN: ${{ secrets.MAILCHIMP_DOMAIN }}
+          MAILCHIMP_USERNAME: ${{ secrets.MAILCHIMP_USERNAME }}
+          MAILCHIMP_API_KEY: ${{ secrets.MAILCHIMP_API_KEY }}
+          MAILCHIMP_ACCOUNT_EMAIL: ${{ secrets.MAILCHIMP_ACCOUNT_EMAIL }}
+        run: make pytest-saas
