--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -155,8 +155,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run unit test suite
-        run: make pytest-unit
-
+        run: |
+          docker compose up -d fidesctl
+          docker compose run --no-deps --rm fidesctl pytest -x -m unit
       - name: Run integration test suite
         run: make pytest-integration
         env:
