--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -155,6 +155,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run unit test suite
+        shell: bash -l {0}
         run: |
           docker compose up -d fidesctl
           docker compose run --no-deps --rm fidesctl pytest -x -m unit
