Export a data map using fides resources (#350)
* start exporting the organization data

* create a templated datamap export using the provided mockup

* update export for new attributes

* update organization docs, add headers back

* fix mypy and more, add and improve testing

* exclude failing mssql tests

* refactor export_datamap to take csv as option

* template cleanup, add country list

* get distinct third countries

* add mssql back in as it seems to be passing outside of macos

* Update docs/fides/docs/language/resources/organization.md

Co-authored-by: Thomas La Piana <thomas.lapiana+github@pm.me>

* split export and tests due to size, clean comments

Co-authored-by: Thomas La Piana <thomas.lapiana+github@pm.me>

--- a/fidesctl/demo_resources/demo_dataset.yml
+++ b/fidesctl/demo_resources/demo_dataset.yml
@@ -9,7 +9,7 @@ dataset:
   - aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
   retention: "30 days after account deletion"
   third_country_transfers:
-    - USA
+    - GBR
     - CAN
   collections:
   - name: users
@@ -28,11 +28,13 @@ dataset:
       data_categories:
       - user.provided.identifiable.contact.email
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+      retention: Account termination
     - name: first_name
       description: User's first name
       data_categories:
       - user.provided.identifiable.name
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+      retention: Account termination
     - name: food_preference
       description: User's favorite food
       data_categories: []
