--- a/fidesctl/demo_resources/demo_system.yml
+++ b/fidesctl/demo_resources/demo_system.yml
@@ -12,7 +12,7 @@ system:
         data_categories:
           - user.provided.identifiable.contact
           - user.derived.identifiable.device.cookie_id
-        data_use: improve.system
+        data_uses: improve.system
         data_subjects:
           - customer
         data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
