--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -43,6 +43,9 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          
+      - name: Deploy the docs without a version in the URL for legacy links
+        run: mkdocs gh-deploy -v -f docs/fidesctl/mkdocs.yml --force
 
       - name: Deploy Stable Docs if a Release is Tagged
         if: ${{ env.TAG }}
