updated the APISettings to handle the new values

--- a/fidesctl/.fides/fidesctl.toml
+++ b/fidesctl/.fides/fidesctl.toml
@@ -1,7 +1,7 @@
 [api]
 database_user = "postgres"
-databse_password = "fidesctl"
-databse_host = "fidesctl-db"
+database_password = "fidesctl"
+database_host = "fidesctl-db"
 database_port = "5432"
 database_name = "fidesctl"
 
